<resources>
    <string name="app_name">New Sahabat Auto2000</string>
    <string name="masukkan_username">Username</string>
    <string name="masukkan_pass">Password</string>
    <string name="login_sales">LOGIN</string>
    <string name="login_spv">LOGIN SPV</string>
    <string name="text_login_spv">Klik Disini untuk Login Spv</string>
    <string name="text_login_sales">Klik Disini untuk Login Sales</string>
    <string name="daftar_sales">Daftar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="no_telp">No. Telp</string>
    <string name="email">Email</string>
    <string name="dashboard">Dashboard</string>
    <string name="profil">Profil</string>
    <string name="customer">Prospek</string>
    <string name="grafik">Grafik</string>
    <string name="report">Report Bug</string>
    <string name="report_bug">Laporkan bug aplikasi yang anda alami</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="total_cust">Total Prospek:</string>
    <string name="total_cust_monthly">Total Prospek Bulan Ini:</string>
    <string name="total_cust_yearly">Total Prospek Tahun Ini:</string>
    <string name="nama">Nama</string>
    <string name="titik_dua">:</string>
    <string name="ubah_profil">UBAH PROFIL</string>
    <string name="ubah">UBAH</string>
    <string name="lo">Logout</string>
    <string name="jenis_mobil">Jenis Mobil</string>
    <string name="warna_mobil">Warna Mobil</string>
    <string name="pria">Pria</string>
    <string name="wnt">Wanita</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="almt">Alamat</string>
    <string name="agama">Agama</string>
    <string name="tgl_lahir">Tanggal Lahir</string>
    <string name="simpan">SIMPAN</string>
    <string name="search">Search</string>
    <string name="daftar_prospek">LIHAT DAFTAR PROSPEK</string>
    <string name="refresh">Refresh</string>
    <string name="sortdate">Sort by Date</string>
    <string name="for_custom_alert">Masukkan tanggal awal dan akhir</string>
    <string name="tgl_awal">Tanggal awal</string>
    <string name="tgl_akhir">Tanggal akhir</string>
    <string name="sortir">SORTIR</string>
    <string name="pilih_spv">Pilih SPV</string>
    <string name="user_exist">Username sudah ada</string>
    <string name="pass_min">Password minimal 6 karakter</string>
    <string name="welcome">Welcome</string>
    <string name="garing">/</string>
    <string name="pilih_kategori">Pilih Kategori</string>
    <string name="tgl_input">Tgl Input</string>
    <string name="update">UPDATE</string>
    <string name="del">HAPUS</string>
    <string name="for_ktgr_alert">Pilih kategori</string>
    <string name="sortktgr">Sort by Kategori</string>
</resources>
