<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bismillah.newsahabatauto2000.Activity.InputProspekActivity"
    android:orientation="vertical">
    <include
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey">
                <EditText
                    android:id="@+id/nama_cust_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_lengkap"
                    android:inputType="textCapWords"
                    android:imeOptions="actionDone"
                    android:layout_marginBottom="10dp"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_edt"
                android:padding="5dp"
                android:layout_marginBottom="10dp">
                <Spinner
                    android:id="@+id/kategori_cust_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:spinnerMode="dropdown"
                    android:drawSelectorOnTop="true"
                    android:theme="@style/SpinnerStyle" />
            </LinearLayout>
            <TextView
                android:id="@+id/jenis_kelamin_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jk"
                android:textColor="@color/black"
                android:layout_marginBottom="3dp"/>
            <RadioGroup
                android:id="@+id/sex_radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_edt"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <RadioButton
                    android:id="@+id/pria_cust_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pria"
                    android:textColor="@color/black"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"/>
                <RadioButton
                    android:id="@+id/wnt_cust_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wnt"
                    android:textColor="@color/black"/>
            </RadioGroup>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey">
                <EditText
                    android:id="@+id/jenis_mobil_cust_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/jenis_mobil"
                    android:inputType="textCapWords"
                    android:imeOptions="actionDone"
                    android:layout_marginBottom="10dp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey">
                <EditText
                    android:id="@+id/warna_mobil_cust_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/warna_mobil"
                    android:inputType="textCapWords"
                    android:imeOptions="actionDone"
                    android:layout_marginBottom="10dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey">
                <EditText
                    android:id="@+id/alamat_cust_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/almt"
                    android:inputType="textCapSentences"
                    android:imeOptions="actionDone"
                    android:layout_marginBottom="10dp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey">
                <EditText
                    android:id="@+id/telp_cust_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_telp"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:layout_marginBottom="10dp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey">
                <EditText
                    android:id="@+id/email_cust_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionDone"
                    android:layout_marginBottom="10dp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey">
                <EditText
                    android:id="@+id/tgl_cust_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tgl_input"
                    android:layout_marginBottom="10dp"
                    android:enabled="false"
                    android:visibility="gone"/>
            </android.support.design.widget.TextInputLayout>




            <android.support.design.widget.TextInputLayout
                android:id="@+id/agama_cust_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey"
                android:visibility="gone">
                <EditText
                    android:id="@+id/agama_cust_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/agama"
                    android:inputType="textCapWords"
                    android:imeOptions="actionDone"
                    android:layout_marginBottom="10dp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tgl_lahir_cust_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey"
                android:visibility="gone">
                <EditText
                    android:id="@+id/tgl_lahir_cust_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tgl_lahir"
                    android:inputType="date"
                    android:imeOptions="actionDone"
                    android:layout_marginBottom="10dp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/simpan_cust_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:text="@string/simpan"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"/>
            <Button
                android:id="@+id/update_cust_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:text="@string/update"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>
            <Button
                android:id="@+id/del_cust_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:text="@string/del"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/tgl_lahir_cust_tv_gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
