<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_custom_alert"
        android:textColor="#000000"
        android:textSize="19sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey">
        <EditText
            android:id="@+id/tgl_awal_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tgl_awal"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:layout_marginBottom="5dp"
            android:onClick="setDate"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>
        </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/grey">
        <EditText
            android:id="@+id/tgl_akhir_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tgl_akhir"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:layout_marginBottom="10dp"
            android:onClick="setDate"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/tgl_pilih_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:text="@string/sortir"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>
</LinearLayout>