<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bismillah.newsahabatauto2000.Activity.UbahProfilActivity"
    android:orientation="vertical">

    <include
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/pp_edit_iv"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/ic_person_grey_24dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey">
                <EditText
                    android:id="@+id/nama_edit_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_lengkap"
                    android:inputType="textCapWords"
                    android:imeOptions="actionDone"
                    android:layout_marginBottom="10dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey">
                <EditText
                    android:id="@+id/username_edit_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:layout_marginBottom="10dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey">
                <EditText
                    android:id="@+id/telp_edit_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_telp"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:layout_marginBottom="10dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey">
                <EditText
                    android:id="@+id/email_edit_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionDone"
                    android:layout_marginBottom="15dp"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/ubah_edit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:text="@string/ubah"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
